--- a/startpage/tailwind.css
+++ b/startpage/tailwind.css
@@ -109,6 +109,7 @@ Reset links to optimize for opt-in styling instead of opt-out.
 a {
   color: inherit;
   text-decoration: inherit;
+  padding-left: 1em;
 }
 
 /*
